--- a/spc-web-gateway/config.json
+++ b/spc-web-gateway/config.json
@@ -3,7 +3,7 @@
     "version": "0.100.0",
     "slug": "hassio_spc_web_gateway",
     "description": "Run SPC Web Gateway in Hass.io",
-    "arch": ["amd64","armhf","aarch64"],
+    "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
     "url": "https://github.com/sebastianengman/hassio-addons/spc-web-gateway",
     "startup": "initialize",
     "boot": "auto",
