--- a/spc-web-gateway-rpi/config.json
+++ b/spc-web-gateway-rpi/config.json
@@ -1,5 +1,5 @@
 {
-    "name": "Hass.io spc-web-gateway",
+    "name": "Hass.io spc-web-gateway arm64",
     "version": "0.100.0",
     "slug": "hassio_spc_web_gateway",
     "description": "Run SPC Web Gateway in Hass.io",
