--- a/spc-web-gateway-rpi/config.json
+++ b/spc-web-gateway-rpi/config.json
@@ -1,10 +1,10 @@
 {
     "name": "Hass.io spc-web-gateway arm64",
-    "version": "0.100.0",
+    "version": "0.100.1",
     "slug": "hassio_spc_web_gateway_arm64",
     "description": "Run SPC Web Gateway in Hass.io",
     "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
-    "url": "https://github.com/sebastianengman/hassio-addons/spc-web-gateway-rpi",
+    "url": "https://github.com/sebastianengman/hassio-addons/tree/master/spc-web-gateway-rpi",
     "startup": "initialize",
     "boot": "auto",
     "webui": "http://[HOST]:[PORT:8088]",
@@ -15,5 +15,5 @@
     },
     "options": {},
     "schema": {},
-    "image": "sebastianengman/spc-rpi-stretch"
+    "image": "sebastianengman/spc-rpi-stretch:latest"
 }
